--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "salamandra",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "A webapp/website framework that doesn't get in your way",
   "main": "index.js",
   "scripts": {
@@ -26,5 +26,19 @@
     "async": "~0.9.0"
   },
   "author": "tunderdomb",
-  "license": "MIT"
+  "license": "MIT",
+  "bin": {
+    "salamandra": "index.js"
+  },
+  "directories": {
+    "test": "test"
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/tunderdomb/salamandra.git"
+  },
+  "bugs": {
+    "url": "https://github.com/tunderdomb/salamandra/issues"
+  }
 }
