--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
     "dustjs-helpers": "^1.6.1",
     "dustjs-linkedin": "^2.6.1",
     "express": "^4.12.3",
-    "minimist": "~1.1.1",
-    "mkdirp": "~0.5.0",
-    "lodash.template": "~3.3.2",
-    "async": "~0.9.0"
+    "minimist": "^1.1.1",
+    "mkdirp": "^0.5.0",
+    "lodash.template": "^3.3.2",
+    "async": "^0.9.0"
   },
   "author": "tunderdomb",
   "license": "MIT",
