--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "salamandra",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "A webapp/website framework that doesn't get in your way",
   "main": "index.js",
   "scripts": {
@@ -17,13 +17,16 @@
     "browserify"
   ],
   "dependencies": {
+    "async": "^0.9.0",
+    "autoprefixer-core": "^5.1.8",
     "dustjs-helpers": "^1.6.1",
     "dustjs-linkedin": "^2.6.1",
     "express": "^4.12.3",
+    "lodash.template": "^3.3.2",
     "minimist": "^1.1.1",
     "mkdirp": "^0.5.0",
-    "lodash.template": "^3.3.2",
-    "async": "^0.9.0"
+    "stylus": "^0.50.0",
+    "through2": "^0.6.3"
   },
   "author": "tunderdomb",
   "license": "MIT",
