--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "dependencies": {
     "async": "^0.9.0",
     "autoprefixer-core": "^5.1.8",
+    "browser-sync": "^2.5.2",
+    "connect-inject": "^0.3.2",
     "dustjs-helpers": "^1.6.1",
     "dustjs-linkedin": "^2.6.1",
     "express": "^4.12.3",
