--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "salamandra",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "A webapp/website framework that doesn't get in your way",
   "main": "index.js",
   "scripts": {
@@ -25,6 +25,7 @@
     "dustjs-helpers": "^1.6.1",
     "dustjs-linkedin": "^2.6.1",
     "express": "^4.12.3",
+    "glob": "^5.0.5",
     "lodash.template": "^3.3.2",
     "minimist": "^1.1.1",
     "mkdirp": "^0.5.0",
@@ -34,7 +35,7 @@
   "author": "tunderdomb",
   "license": "MIT",
   "bin": {
-    "salamandra": "bin/index.js"
+    "salamandra": "./bin/index.js"
   },
   "directories": {
     "test": "test"
