--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "salamandra",
-  "version": "0.1.2",
+  "version": "0.2.0",
   "description": "A webapp/website framework that doesn't get in your way",
   "main": "index.js",
   "scripts": {
@@ -20,6 +20,7 @@
     "async": "^0.9.0",
     "autoprefixer-core": "^5.1.8",
     "browser-sync": "^2.5.2",
+    "browserify": "^9.0.8",
     "clean-css": "^3.1.8",
     "connect-inject": "^0.3.2",
     "dustjs-helpers": "^1.6.1",
@@ -30,7 +31,10 @@
     "minimist": "^1.1.1",
     "mkdirp": "^0.5.0",
     "stylus": "^0.50.0",
-    "through2": "^0.6.3"
+    "through2": "^0.6.3",
+    "uglify-js": "^2.4.20",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0"
   },
   "author": "tunderdomb",
   "license": "MIT",
